# cross-border-stablecoin-register

./: .gitignore  BUILD_NOTE_v0.10.0_directed-132-and-published-class-rule.md  BUILD_NOTE_v0.10.1_forward-sensitivity-regeneration.md  BUILD_NOTE_v0.2.0_dimension-expansion.md  BUILD_NOTE_v0.9.8_source-layer-follow-through.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CONTRIBUTING.md  COVERAGE.md  DISCLOSURE.md  GOVERNANCE.md  LICENSE  LICENSING.md  MCP_SERVER.md  METHODOLOGY.md  PACKAGE.md  README-PYPI.md  README.md  REGRESSION.md  ROADMAP.md  UPGRADE_v0.9.91_to_v0.10.0.md  _TEMPLATE.yaml  analysis.schema.json  build.py  build_api.py  build_pages.py  build_site.py  check_readme_counts.py  cn-prc-cross_border_data-001.yaml  cn-prc-distribution-001.yaml  cn-prc-issuer_pathway-001.yaml  cn-prc-monetary_sovereignty-001.yaml  cn-prc-regulatory_authority-001.yaml  console.html  corridor.schema.json  corridors.html  dataset.json  eu-emt-monetary_sovereignty-001.yaml  eu-emt-permitted_activity_yield-001.yaml  (+50 more)
analysis/: architectural_patterns.json  compatibility.json  computed_compatibility.json  computed_convergence.json  computed_corridor_skeletons.json  computed_corridor_states.json  computed_corridors_directed.json  computed_forward_view.json  computed_sensitivity.json  computed_settlement.json  computed_stakeholder_profiles.json  computed_substrate.json  computed_timeline.json  constraint_substrate.json  event_calendar.json  forward_transition_set.json  open_questions.json  signal_table.json  signal_table.source.json  verification_ledger.json  verification_worklist.json
api/: citable.json  convergence.json  corridor_states.json  corridors_directed.json  events.json  forward.json  index.json  meta.json  reconciliation.json  records.json  sensitivity.json  settlement.json  signal_table.json  worklist.json
docs/: CONNECT_MCP.md  DEPLOYMENT.md  DEVELOPMENTS_SINCE_SNAPSHOT.md  PAPER_ERRATA.md  SIGNAL_TABLE.md  VERIFICATION_BACKLOG.md  VERSIONS.md  verification_backlog.json
hosted-mcp/: Dockerfile  cbsr_obs.py  requirements.txt  serve_http.py
metrics/: public_stats.jsonl  pull_public_stats.py
papers/: Citable_by_Construction_Methodology_v0.1.0.md  Cross-Border_Stablecoin_Feasibility_Over_Time_v0.1.0.md
scripts/: apply_verification.py  (+12 more)
(+242 files in other folders)
